get elements by their ids in the main.ts file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <main class="kanban-board" aria-label="Kanban Board">
       <section class="task-form" aria-label="Add New Task">
+        <button id="task-btn">+ Add Task</button>
         <form id="task-form">
           <fieldset>
             <legend>Add New Task</legend>
@@ -38,7 +39,7 @@
               <option value="high">High</option>
             </select>
 
-            <button type="submit">Add Task</button>
+            <button type="submit" id="addNewTask-btn">Add Task</button>
           </fieldset>
         </form>
       </section>
