added the edit and delete functions

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             </div>
           </form>
         </dialog>
+        <div id="tasks-container"></div>
       </section>
 
       <section class="kanban-columns" aria-label="Task Columns">
