corrected the onclick functions in the updatedTaskContainer()

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <option value="high">High</option>
             </select>
 
-            <button type="submit" id="addNewTask-btn">Add Task</button>
+            <button type="submit" id="add-new-task-btn">Add Task</button>
           </fieldset>
         </form>
         <dialog id="confirm-close-dialog">
