--- a/index.html
+++ b/index.html
@@ -80,17 +80,23 @@
       </section>
 
       <section class="kanban-columns grid grid-cols-1 md:grid-cols-3 gap-6" aria-label="Task Columns">
-        <div class="column bg-white rounded shadow p-4 space-y-4" data-status="todo">
+        <div class="column bg-white rounded shadow p-4 space-y-4" data-status="todo" 
+          ondrop="drop(event, 'todo')"
+          ondragover="allowDrop(event)">
           <h2 class="text-xl font-semibold border-b pb-2">To Do</h2>
           <div class="task-list space-y-2" id="todo-tasks"></div>
         </div>
 
-        <div class="column bg-white rounded shadow p-4 space-y-4" data-status="in-progress">
+        <div class="column bg-white rounded shadow p-4 space-y-4" data-status="in-progress"
+          ondrop="drop(event, 'in-progress')"
+          ondragover="allowDrop(event)">
           <h2 class="text-xl font-semibold border-b pb-2">In Progress</h2>
           <div class="task-list space-y-2" id="in-progress-tasks"></div>
         </div>
 
-        <div class="column bg-white rounded shadow p-4 space-y-4" data-status="done">
+        <div class="column bg-white rounded shadow p-4 space-y-4" data-status="done"
+          ondrop="drop(event, 'done')"
+          ondragover="allowDrop(event)">
           <h2 class="text-xl font-semibold border-b pb-2">Done</h2>
           <div class="task-list space-y-2" id="done-tasks"></div>
         </div>
