added type interface and worked on fixing the drag and drop functionalities

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
           <div
             class="task-list space-y-2"
             id="todo-tasks"
+            data-status="todo"
             data-droppable="true"
           ></div>
         </div>
@@ -157,6 +158,7 @@
           <div
             class="task-list space-y-2"
             id="in-progress-tasks"
+            data-status="in-progress"
             data-droppable="true"
           ></div>
         </div>
@@ -170,6 +172,7 @@
           <div
             class="task-list space-y-2"
             id="done-tasks"
+            data-status="done"
             data-droppable="true"
           ></div>
         </div>
